[package]
name = "jingle"
version = "0.2.1"
edition = "2021"
description = "SMT Modeling for Ghidra's PCODE"
homepage = "https://github.com/toolCHAINZ/jingle"
repository = "https://github.com/toolCHAINZ/jingle"
readme = "README.md"
license = "MIT"
authors = ["toolCHAINZ"]
rust-version = "1.77.0"
categories = ["mathematics"]
keywords = ["ghidra", "sleigh", "pcode", "smt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jingle"
required-features = ["bin_features"]

[dependencies]
jingle_sleigh = { path = "../jingle_sleigh", version = "0.2.1" }
z3 = { git = "https://github.com/toolCHAINZ/z3.rs.git", branch = "patch-1" }
z3-sys = { git = "https://github.com/toolCHAINZ/z3.rs.git", branch = "patch-1", optional = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
clap = { version = "4.5", optional = true, features = ["derive"] }
confy = { version = "0.6" , optional = true}
hex = { version = "0.4" , optional = true}
anyhow = { version = "1.0", optional = true }
pyo3 = { version = "0.24", optional = true }

[features]
default = []
bin_features = ["dep:clap", "dep:confy", "dep:hex", "dep:anyhow"]
gimli = ["jingle_sleigh/gimli"]
pyo3 = ["dep:pyo3", "jingle_sleigh/pyo3", "dep:z3-sys"]