[package]
name = "jingle"
version = "0.2.4"
edition = "2024"
description = "SMT Modeling for Ghidra's PCODE"
homepage = "https://github.com/toolCHAINZ/jingle"
repository = "https://github.com/toolCHAINZ/jingle"
readme = "README.md"
license = "MIT"
authors = ["toolCHAINZ"]
rust-version = "1.85.0"
categories = ["mathematics"]
keywords = ["ghidra", "sleigh", "pcode", "smt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jingle"
required-features = ["bin"]

[dependencies]
jingle_sleigh = { path = "../jingle_sleigh", version = "0.2.3" }
z3 = { version = "0.16.0" }
z3-sys = { version = "0.9.7", optional = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
clap = { version = "4.5", optional = true, features = ["derive"] }
confy = { version = "1.0.0", optional = true}
hex = { version = "0.4" , optional = true}
anyhow = { version = "1.0", optional = true }
pyo3 = { version = "0.25", optional = true }
petgraph = "0.8.2"

[features]
default = []
bin = ["dep:clap", "dep:confy", "dep:hex", "dep:anyhow"]
gimli = ["jingle_sleigh/gimli"]
pyo3 = ["dep:pyo3", "jingle_sleigh/pyo3", "dep:z3-sys"]
