[package]
name = "jingle"
version = "0.5.2"
edition = "2024"
description = "SMT Modeling for Ghidra's PCODE"
homepage = "https://github.com/toolCHAINZ/jingle"
repository = "https://github.com/toolCHAINZ/jingle"
readme = "README.md"
license = "MIT"
authors = ["toolCHAINZ"]
rust-version = "1.85.0"
categories = ["mathematics"]
keywords = ["ghidra", "sleigh", "pcode", "smt"]
exclude = [
    "examples/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jingle"
required-features = ["bin"]

[dependencies]
jingle_sleigh = { path = "../jingle_sleigh", version = "0.4.4" }
z3 = { version = "0.19.0" }
z3-sys = { version = "0.10.0", optional = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
clap = { version = "4.5", optional = true, features = ["derive"] }
confy = { version = "1.0.0", optional = true }
hex = { version = "0.4", optional = true }
anyhow = { version = "1.0", optional = true }
pyo3 = { version = "0.27.2", optional = true, default-features = false, features = ["macros"] }
petgraph = "0.8.2"
sorted-vec = "0.8.10"
inventory = "0.3.21"
itertools = "0.14.0"

[features]
default = []
bin = ["dep:clap", "dep:confy", "dep:hex", "dep:anyhow"]
gimli = ["jingle_sleigh/gimli"]
pyo3 = ["dep:pyo3", "jingle_sleigh/pyo3", "dep:z3-sys"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[example]]
name = "location"
