[package]
name = "jingle_python"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jingle"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.24"
jingle = {path = "../jingle", features = ["pyo3", "gimli"]}