[package]
name = "jingle_python"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"
description = "A pyo3 package for jingle"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jingle"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.26"
jingle = {path = "../jingle", features = ["pyo3", "gimli"], version = "0.3.1" }
