[package]
name = "jingle_sleigh"
version = "0.2.0"
edition = "2021"
description = "An FFI layer for Ghidra's SLEIGH"
homepage = "https://github.com/toolCHAINZ/jingle"
repository = "https://github.com/toolCHAINZ/jingle"
readme = "README.md"
license = "MIT"
authors = ["toolCHAINZ"]
rust-version = "1.77.0"
categories = ["api-bindings"]
keywords = ["ghidra", "sleigh", "pcode"]
include = [
    "Cargo.toml",
    "SLEIGH_LICENSE",
    "build.rs",
    "src/**/*.*"
]

[dependencies.pyo3]
version = "0.24.0"
optional = true

[dependencies]
cxx = "1.0.131"
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = { version = "1.0.61", features = [] }
object = { version = "0.36.0", optional = true }
tracing = "0.1.40"

[build-dependencies]
cxx-build = "1.0.131"

[features]
gimli = ["dep:object"]
default = ["gimli"]
pyo3 = ["dep:pyo3"]