[package]
name = "jingle_sleigh"
version = "0.2.1"
edition = "2021"
description = "An FFI layer for Ghidra's SLEIGH"
homepage = "https://github.com/toolCHAINZ/jingle"
repository = "https://github.com/toolCHAINZ/jingle"
readme = "README.md"
license = "MIT"
authors = ["toolCHAINZ"]
rust-version = "1.77.0"
categories = ["api-bindings"]
keywords = ["ghidra", "sleigh", "pcode"]
include = [
    "Cargo.toml",
    "SLEIGH_LICENSE",
    "build.rs",
    "src/**/*.*"
]

[dependencies.pyo3]
version = "0.24.0"
optional = true

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
thiserror = { version = "2.0", features = [] }
object = { version = "0.36", optional = true }
tracing = "0.1"

[build-dependencies]
cxx-build = "1.0"

[features]
gimli = ["dep:object"]
default = ["gimli"]
pyo3 = ["dep:pyo3"]