[package]
name = "jingle_sleigh"
version = "0.4.7"
edition = "2024"
description = "An FFI layer for Ghidra's SLEIGH"
homepage = "https://github.com/toolCHAINZ/jingle"
repository = "https://github.com/toolCHAINZ/jingle"
readme = "README.md"
license = "MIT"
authors = ["toolCHAINZ"]
rust-version = "1.85.0"
categories = ["api-bindings"]
keywords = ["ghidra", "sleigh", "pcode"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "SLEIGH_LICENSE",
    "build.rs",
    "src/**/*.*"
]

[dependencies.pyo3]
version = "0.27.2"
optional = true
default-features = false
features = ["macros"]

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.1"
thiserror = { version = "2.0", features = [] }
object = { version = "0.37.1", optional = true }
tracing = "0.1"
pest = "2.8.4"
pest_derive = "2.8.4"

[build-dependencies]
cxx-build = "1.0"

[features]
gimli = ["dep:object"]
default = ["gimli"]
pyo3 = ["dep:pyo3"]
